objects/zkups__UPSNAFTACO__c.object
<CustomObject>
    <customHelpPage>zkups__internationalShipmentHelp</customHelpPage>
    <description>UPS NAFTA CO is a collection of data defined for generating a NAFTA Certificate of Origin</description>
    <fields>
        <fullName>zkups__BlanketPeriodBeginDate__c</fullName>
        <label>Blanket Period BeginDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zkups__BlanketPeriodEndDate__c</fullName>
        <label>Blanket Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zkups__OverrideSoldTo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Sold To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__ProducerAddressCity__c</fullName>
        <label>Producer Address City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ProducerAddressCountryCode__c</fullName>
        <label>Producer Address Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ProducerAddressPostalCode__c</fullName>
        <label>Producer Address Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ProducerAddressStateProvince__c</fullName>
        <label>Producer Address State/Province</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ProducerAddressStreet__c</fullName>
        <description>Up to 3 lines maximum. Each line must be no more than 35 characters long.</description>
        <inlineHelpText>Up to 3 lines maximum. Each line must be no more than 35 characters long.</inlineHelpText>
        <label>Producer Address Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkups__ProducerAttentionName__c</fullName>
        <label>Producer Attention Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ProducerCompanyName__c</fullName>
        <label>Producer Company Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ProducerEmail__c</fullName>
        <label>Producer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkups__ProducerPhone__c</fullName>
        <label>Producer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>zkups__ProducerTaxId__c</fullName>
        <label>Producer Tax ID</label>
        <length>30</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>zkups__SoldToAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>UPS NAFTA COs</relationshipLabel>
        <relationshipName>UPS_NAFTA_COs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkups__SoldToCity__c</fullName>
        <label>Sold To City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SoldToCompanyName__c</fullName>
        <label>Sold To Company Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SoldToContactName__c</fullName>
        <label>Sold To Contact Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SoldToContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold To Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>UPS NAFTA COs</relationshipLabel>
        <relationshipName>UPS_NAFTA_COs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkups__SoldToCountry__c</fullName>
        <label>Sold To Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SoldToPhone__c</fullName>
        <label>Sold To Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SoldToStateProvince__c</fullName>
        <label>Sold To State/Province</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SoldToStreet__c</fullName>
        <label>Sold To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkups__SoldToTaxID__c</fullName>
        <label>Sold To TaxID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SoldToZipPostalCode__c</fullName>
        <label>Sold To Zip/Postal Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>UPS NAFTA CO</label>
    <listViews>
        <fullName>Nolan_Daigle_UPSNAFTACO</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>UPS-NAFTA-CO-{0000}</displayFormat>
        <label>NAFTA CO Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UPS NAFTA COs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>